--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: antiquewhite;
 }
+
+ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+ul li {
+    padding: 5px;
+}
