--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ ul {
     display: flex;
     flex-direction: row;
     list-style: none;
+    justify-content: center;
 }
 
 ul li {
-    padding: 5px;
+    padding: 10px;
 }
